--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,6 +60,7 @@ body{
     border-color: rgb(0,0,0);
     border-right-color: rgb(0,0,0);
     margin-top: 45px;
+    border-radius: 10px;
 }
 .btn-primary:hover,.btn-primary:focus{
     background-color:white  !important;
